welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
	faireMotif();
}

def faireV(c:Color) {
	setCouleurBrosse(c)
	avance();
	baisseBrosse();
	leveBrosse();
	avance();
	gauche();
	avance();
	baisseBrosse();
	leveBrosse();
	recule();
	droite();
	avance();
	baisseBrosse();
	leveBrosse();
	avance();
	gauche();
}

def faireMotif() {
	for (c <-1 to 4) {
		c match {
			case 1 => Color.yellow
			case 2 => Color.red
			case 3 => Color.blue
			case 4 => Color.green
		}
		faireV(c);
	}
}
